# tanpopo

./: README.md  basis.py  clustering.py  data.py  kernel.py  kpca.py  lift.py  models.py  operators.py  plot.py  projection.py  pyproject.toml  srgb.py  srgem.py  utils.py
tanpopo/: __init__.py  analysis.py  basis.py  cli.py  clustering.py  covariates.py  data.py  io.py  kernel.py  models.py  operators.py  plot.py  utils.py  workflows.py
