[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tanpopo"
version = "0.1.0"
description = "Spatial gene eigenmode methods for spatial transcriptomics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Matthew Ceko", email = "matthew.ceko@petermac.org" }
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "pandas",
  "anndata",
  "scanpy[leiden]",
  "matplotlib"
]

[project.optional-dependencies]
dev = [
  "black",
]

[project.scripts]
tpp-spatial-modes = "tanpopo.cli:main"
tpp-cluster-spots = "tanpopo.clustering:cluster_spots"
tpp-cluster-genes = "tanpopo.clustering:cluster_genes"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 99
